--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     					<img src="images/PortfoliPics/4.png" alt="portfolio"/>
     					<div class="overlay">
     						<span class="fa fa-plus"></span>
-    						<h4>Branding</h4>
+    						<h4>TalkItOut</h4>
     					</div>
     				  </div>
     				</div>
@@ -287,7 +287,7 @@
     					<img src="images/PortfoliPics/2.png" alt="portfolio"/>
     					<div class="overlay">
     						<span class="fa fa-plus"></span>
-    						<h4>Photoshop</h4>
+    						<h4>TalkItOut</h4>
     					</div>
     				  </div>
     				</div>
@@ -296,7 +296,7 @@
     					<img src="images/PortfoliPics/3.png" alt="portfolio"/>
     					<div class="overlay">
     						<span class="fa fa-plus"></span>
-    						<h4>Branding</h4>
+    						<h4>TalkItOut</h4>
     					</div>
     				  </div>
     				</div>
@@ -305,7 +305,7 @@
     					<img src="images/PortfoliPics/1.png" alt="portfolio"/>
     					<div class="overlay">
     						<span class="fa fa-plus"></span>
-    						<h4>Fashion</h4>
+    						<h4>EDC, T.I.E.T</h4>
     					</div>
     				  </div>
     				</div>
@@ -314,7 +314,7 @@
     					<img src="images/PortfoliPics/5.png" alt="portfolio"/>
     					<div class="overlay">
     						<span class="fa fa-plus"></span>
-    						<h4>Photoshop</h4>
+    						<h4>Personal</h4>
     					</div>
     				  </div>
     				</div>
@@ -323,7 +323,7 @@
     					<img src="images/PortfoliPics/6.png" alt="portfolio"/>
     					<div class="overlay">
     						<span class="fa fa-plus"></span>
-    						<h4>Branding</h4>
+    						<h4>Personal</h4>
     					</div>
     				  </div>
     				</div>
