--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
     				</div>
     				<div class="row">
     					<div class="button text-right">
-    						<a href="#home">Get In Touch</a>
+    						<a href="mailto: dev.soumallya@gmail.com">Get In Touch</a>
     					</div>
     				</div>
     			</div>
