--- a/index.html
+++ b/index.html
@@ -363,6 +363,19 @@
           </div>
           <div class="row">
             <div class="projects-content">
+            	<div class="box">
+                    <div class="img">
+                        <img src="images/Projects/7.png" alt="PROJECTS" />
+                    </div>
+                    <div class="info">
+                        <span>July 2020</span> <span>Android Kotlin App</span>
+                    </div>
+                    <h3>Mausam Delhi</h3>
+                    <p>Mausam Delhi is a simple Kotlin app that gives you the current weather of Delhi with help of Open Weather Map API.</p>
+                    <a href="https://bit.ly/MausamDelhi" target="_blank">Download</a>
+                    <br>
+                    <a href="https://github.com/soumallyadev07/Mausam-Delhi" target="_blank">Read More</a>
+                </div>
                 <div class="box">
                     <div class="img">
                         <img src="images/Projects/1.png" alt="PROJECT" />
@@ -389,7 +402,12 @@
                     <br>
                     <a href="https://github.com/soumallyadev07/StockPilePeer" target="_blank">Read More</a>
                 </div>
-                <div class="box">
+            </div>
+          </div>
+          <br>
+          <div class="row">
+            <div class="projects-content">
+            	<div class="box">
                     <div class="img">
                         <img src="images/Projects/3.png" alt="PROJECT" />
                     </div>
@@ -400,11 +418,6 @@
                     <p>The project revolves around the concept of a typical customer care chatbot can answer simple questions.</p>
                     <a href="https://github.com/soumallyadev07/Intelligent-CustomerHelpDesk-with-Smart-Document-Understanding" target="_blank">Read More</a>
                 </div>
-            </div>
-          </div>
-          <br>
-          <div class="row">
-            <div class="projects-content">
                 <div class="box">
                     <div class="img">
                         <img src="images/Projects/4.png" alt="PROJECTS" />
@@ -426,17 +439,6 @@
                     <h3>Web Scraper</h3>
                     <p>The program tracks the prices of 4 laptops on amazon.in and notifies you every time the price changes so you can make an informed decision.</p>
                     <a href="https://www.instagram.com/p/B3-EB8mhxdS/" target="_blank">Read More</a>
-                </div>
-                <div class="box">
-                    <div class="img">
-                        <img src="images/Projects/6.png" alt="PROJECTS" />
-                    </div>
-                    <div class="info">
-                        <span>Soon</span> <span>In Progress</span>
-                    </div>
-                    <h3>Coming Soon</h3>
-                    <p>I'm currently working on it.</p>
-                    <a href="#" target="_blank">Read More</a>
                 </div>
             </div>
           </div>
