--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                     </div>
                     <h3>Folder Cleaner</h3>
                     <p>This is an automatic file cleaner.</p>
-                    <a href="https://www.instagram.com/p/B-jHjYbjfpU/" target="_blank">Read More</a>
+                    <a href="https://github.com/soumallyadev07/Folder-Cleaner" target="_blank">Read More</a>
                 </div>
                 <div class="box">
                     <div class="img">
@@ -438,7 +438,7 @@
                     </div>
                     <h3>Web Scraper</h3>
                     <p>The program tracks the prices of 4 laptops on amazon.in and notifies you every time the price changes so you can make an informed decision.</p>
-                    <a href="https://www.instagram.com/p/B3-EB8mhxdS/" target="_blank">Read More</a>
+                    <a href="https://github.com/soumallyadev07/WebScraper_PriceTracker_1" target="_blank">Read More</a>
                 </div>
             </div>
           </div>
