--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     						</div>
     						<div class="social-links">
     							<a href="https://www.facebook.com/The.Eminent.Guy" target="_blank"><i class="fa fa-facebook"></i></a>
-    							<a href="https://twitter.com/Dev_Soumallya" target="_blank"><i class="fa fa-twitter"></i></a>
+    							<a href="https://twitter.com/Soumallya_" target="_blank"><i class="fa fa-twitter"></i></a>
     							<a href="https://www.instagram.com/_soumallya_/" target="_blank"><i class="fa fa-instagram"></i></a>
     							<a href="https://www.linkedin.com/in/soumallya-dev" target="_blank"><i class="fa fa-linkedin"></i></a>
     							<a href="https://github.com/soumallyadev07" target="_blank"><i class="fa fa-github"></i></a>
@@ -618,7 +618,7 @@
     			</div>
     			<div class="social">
     				<a href="https://www.facebook.com/The.Eminent.Guy" target="_blank"><i class="fa fa-facebook"></i></a>
-    				<a href="https://twitter.com/Dev_Soumallya" target="_blank"><i class="fa fa-twitter"></i></a>
+    				<a href="https://twitter.com/Soumallya_" target="_blank"><i class="fa fa-twitter"></i></a>
     				<a href="https://www.instagram.com/_soumallya_/" target="_blank"><i class="fa fa-instagram"></i></a>
     				<a href="https://www.linkedin.com/in/soumallya-dev" target="_blank"><i class="fa fa-linkedin"></i></a>
     				<a href="https://github.com/soumallyadev07" target="_blank"><i class="fa fa-github"></i></a>
