--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 	<meta name="viewport" content="width=device-width, intial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="apple-touch-icon" sizes="180x180" href="images/Favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/Favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/Favicons/favicon-16x16.png">
-    <link rel="manifest" href="images/Favicons/site.webmanifest">
+    	<link rel="icon" type="image/png" sizes="32x32" href="images/Favicons/favicon-32x32.png">
+    	<link rel="icon" type="image/png" sizes="16x16" href="images/Favicons/favicon-16x16.png">
+    	<link rel="manifest" href="images/Favicons/site.webmanifest">
 </head>
 <body>
     <!-- START PRELOADER -->
-    <div id="preloader">
+<!--     <div id="preloader">
         <div class="spinnerloader"></div> 
-    </div>
+    </div> -->
     <!-- END PRELOADER -->
 	<!-- START HEADER -->
 	<header>
