--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <!-- START PRELOADER -->
 <!--     <div id="preloader">
         <div class="spinnerloader"></div> 
-    </div> -->
+	</div> -->
+	<div id="preloader">
+		<div id="loader"></div>
+	</div>
     <!-- END PRELOADER -->
 	<!-- START HEADER -->
 	<header>
@@ -462,7 +465,64 @@
     <!-- End Github -->
  
     <!-- Start Testimonials -->
-    
+    <section class="testimonials">
+    	<div class="container">
+    		<div class="row">
+    			<div class="section-title text-center">
+    				<h1>Inspirations</h1>
+    			</div>
+    		</div>
+    		<div class="row">
+    			<div class="testimonials-content">
+    				<div class="testi-slider">
+    					<div class="slide">
+    						<div class="img">
+    							<img src="images/Testimonials/ronaldo-circle.png" alt="Ronaldo" />
+    						</div>
+    						<div class="text">
+    							<p>I see football as an art and all players are artists. If you are a top artist, the last thing you would do is paint a picture somebody else has already painted.</p>
+    						<h6>Cristiano Ronaldo</h6>
+    						<p>Football Player</p>
+    						</div>
+    					</div><div class="slide">
+    						<div class="img">
+    							<img src="images/Testimonials/jobs-circle.png" alt="Jobs" />
+    						</div>
+    						<div class="text">
+    							<p>Design is a funny word. Some people think design means how it looks. But of course, if you dig deeper, it's really how it works. Always be brave and creative.</p>
+    						<h6>Steve Jobs</h6>
+    						<p>American Business Magnate</p>
+    						</div>
+    					</div>
+    					<div class="slide">
+    						<div class="img">
+    							<img src="images/Testimonials/rdj-circle.png" alt="RDJ" />
+    						</div>
+    						<div class="text">
+    							<p>Discipline for me is about respect. It’s not even about self-respect; it’s about respect for life and all it offers. The lesson is that you can still make mistakes and be forgiven.</p>
+    						<h6>Robert Downey Jr.</h6>
+    						<p>American Actor</p>
+    						</div>
+    					</div>
+    					<div class="slide">
+    						<div class="img">
+    							<img src="images/Testimonials/elon-circle.png" alt="Elon" />
+    						</div>
+    						<div class="text">
+    							<p>If you get up in the morning and think the future is going to be better, it is a bright day. Otherwise, it's not. I could either watch it happen or be a part of it.</p>
+    						   <h6>Elon Musk</h6>
+    						   <p>CEO of SpaceX</p>
+    						</div>
+    					</div>
+    				</div>
+    				<!-- Slide Controls -->
+    			  <div class="slide-controls">
+    			  	
+    			  </div>
+    			</div>
+    		</div>
+    	</div>
+    </section>
     <!-- End Testimonials -->
     <!-- Start Blogs -->
     <section class="blogs" id="blog">
