--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
 	<meta name="viewport" content="width=device-width, intial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="apple-touch-icon" sizes="180x180" href="images/Favicons/apple-touch-icon.png">
-    	<link rel="icon" type="image/png" sizes="32x32" href="images/Favicons/favicon-32x32.png">
-    	<link rel="icon" type="image/png" sizes="16x16" href="images/Favicons/favicon-16x16.png">
-    	<link rel="manifest" href="images/Favicons/site.webmanifest">
+	<link rel="icon" type="image/png" sizes="32x32" href="images/Favicons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="images/Favicons/favicon-16x16.png">
+	<link rel="manifest" href="images/Favicons/site.webmanifest">
+    <style> 
+        input[type=submit] {
+            border-radius: 4px;
+            color: #ffffff;
+            padding: 12px 25px;
+            text-decoration: none;
+            font-size: 14px;
+            text-transform: uppercase;
+            font-weight: 600;
+            transition: all .5s ease;
+            background-color: #405d9b;
+            box-shadow: 0px 10px 15px #e8e8e8;
+            cursor: pointer;
+        }
+        input[type=submit]:hover {
+            background-color: #000000;
+            color: #ffffff;
+        }
+    </style>
 </head>
 <body>
     <!-- START PRELOADER -->
@@ -581,7 +600,9 @@
     				<h1>Get In Touch</h1>
     			</div>
     		</div>
+            <form action="mail_handler.php" method="post" name="form">
     		<div class="row">
+                
     			<div class="contact-form">
     				<div class="row">
     					<div class="text">
@@ -591,24 +612,26 @@
     				</div>
     				<div class="row space-between">
     					<div class="col-6">
-    						<input type="text" class="form-control" name="" placeholder="Name">
+    						<input type="text" class="form-control" name="sndname" placeholder="Name">
     					</div>
     					<div class="col-6">
-    						<input type="text" class="form-control" name="" placeholder="Email">
+    						<input type="text" class="form-control" name="sndemail" placeholder="Email">
     					</div>
     				</div>
     				<div class="row">
     					<div class="col-12">
-    						<textarea class="form-control" placeholder="Your Comment"></textarea>
+    						<textarea class="form-control" name="sndmsg" placeholder="Your Comment"></textarea>
     					</div>
     				</div>
     				<div class="row">
-    					<div class="button text-right">
-    						<a href="mailto:dev.soumallya@gmail.com">Get In Touch</a>
+    					<div class="text-right">
+    						<a><input type="submit" name="submit"></a>
     					</div>
     				</div>
     			</div>
+                
     		</div>
+            </form>
     	</div>
     </section>
     <!-- End contact Us -->
