--- a/index.html
+++ b/index.html
@@ -5,28 +5,9 @@
 	<meta name="viewport" content="width=device-width, intial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="apple-touch-icon" sizes="180x180" href="images/Favicons/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="images/Favicons/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="images/Favicons/favicon-16x16.png">
-	<link rel="manifest" href="images/Favicons/site.webmanifest">
-    <style> 
-        input[type=submit] {
-            border-radius: 4px;
-            color: #ffffff;
-            padding: 12px 25px;
-            text-decoration: none;
-            font-size: 14px;
-            text-transform: uppercase;
-            font-weight: 600;
-            transition: all .5s ease;
-            background-color: #405d9b;
-            box-shadow: 0px 10px 15px #e8e8e8;
-            cursor: pointer;
-        }
-        input[type=submit]:hover {
-            background-color: #000000;
-            color: #ffffff;
-        }
-    </style>
+    	<link rel="icon" type="image/png" sizes="32x32" href="images/Favicons/favicon-32x32.png">
+    	<link rel="icon" type="image/png" sizes="16x16" href="images/Favicons/favicon-16x16.png">
+    	<link rel="manifest" href="images/Favicons/site.webmanifest">
 </head>
 <body>
     <!-- START PRELOADER -->
@@ -624,8 +605,8 @@
     					</div>
     				</div>
     				<div class="row">
-    					<div class="text-right">
-    						<a><input type="submit" name="submit"></a>
+    					<div class="button text-right">
+    						<a href="mailto:dev.soumallya@gmail.com" type="submit">Get In Touch</a>
     					</div>
     				</div>
     			</div>
