Adding Google Analytics

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     	<link rel="icon" type="image/png" sizes="32x32" href="images/Favicons/favicon-32x32.png">
     	<link rel="icon" type="image/png" sizes="16x16" href="images/Favicons/favicon-16x16.png">
     	<link rel="manifest" href="images/Favicons/site.webmanifest">
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-0YKJRWL3TV"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-0YKJRWL3TV');
+	</script>
 </head>
 <body>
     <!-- START PRELOADER -->
