Back To Top Button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     	<link rel="icon" type="image/png" sizes="32x32" href="images/Favicons/favicon-32x32.png">
     	<link rel="icon" type="image/png" sizes="16x16" href="images/Favicons/favicon-16x16.png">
     	<link rel="manifest" href="images/Favicons/site.webmanifest">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
     <!-- START PRELOADER -->
@@ -18,6 +19,9 @@
 		<div id="loader"></div>
 	</div>
     <!-- END PRELOADER -->
+    <!-- START BACK TO TOP SCROLL -->
+    <button id="back-to-top-btn"><i class="fa fa-angle-double-up"></i></button>
+    <!-- END BACK TO TOP SCROLL -->
 	<!-- START HEADER -->
 	<header>
 		<div class="container">
@@ -90,7 +94,7 @@
     						  </div>
     						  <div class="list">
     							<label>Age:</label>
-    							<p>19 Years</p>
+    							<p>20 Years</p>
     						  </div>
     						  <div class="list">
     							<label>Phone:</label>
