--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Soumallya Dev</title>
-	<meta name="viewport" content="width=device-width, intial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="apple-touch-icon" sizes="180x180" href="images/Favicons/apple-touch-icon.png">
     	<link rel="icon" type="image/png" sizes="32x32" href="images/Favicons/favicon-32x32.png">
