--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     						  </div>
     						  <div class="list">
     							<label>Email:</label>
-    							<p>dev.soumallya@gmail.com</p>
+    							<p id="emailIDP">dev.soumallya@gmail.com</p>
     						  </div>
     						  <div class="list">
     							<label>Age:</label>
