--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     					</div>
     					<div class="text">
     						<h4>I'M Soumallya Dev</h4>
-    						<h6>A <span>Pre-Final Year</span> student studying <span>Computer Science</span> in <span>India</span></h6>
+    						<h6>A <span>Final Year</span> student studying <span>Computer Science</span> in <span>India</span></h6>
     						<p>I love to work and learn with new technologies and have a deep interest when it comes to coding. I like to write content and especially creative content & currently working with a start-up & College E-cell as the Joint Secretary.</p>
     						<div class="info">
     						  <div class="list">
@@ -104,7 +104,7 @@
     						  </div>
     						  <div class="list">
     							<label>Age:</label>
-    							<p>20 Years</p>
+    							<p>21 Years</p>
     						  </div>
     						  <div class="list">
     							<label>Phone:</label>
