Update Project Link

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                     </div>
                     <h3>Stock Price Prediction</h3>
                     <p>Stock Pile Peer is a simple flask application that uses Machine Learning to predict the stock price of a given company.</p>
-                    <a href="https://bit.ly/StockPilePeer" target="_blank">Live Site</a>
+                    <a href="https://github.com/soumallyadev07/StockPilePeer" target="_blank">Live Site</a>
                     <br>
                     <a href="https://github.com/soumallyadev07/StockPilePeer" target="_blank">Read More</a>
                 </div>
